...
        lifecycleOwner.lifecycle.repeatOnLifecycle(Lifecycle.State.RESUMED) {
            vm.refreshNow()
        }
    }

    Scaffold(
        modifier = Modifier.testTag("screen_map"),
        topBar = {
            TopAppBar(
                title = {
                    val line = uiState.lineLabel?.takeIf { it.isNotBlank() }
                    val directionDescr = uiState.directions
                        .firstOrNull { it.routeCode == uiState.appliedRouteCode }
...
